--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
  </head>
   
  <body>
+    <img src="GettyImages-183264160-1024x647.webp">
     <h1>Welcome To My Hawaii Vacation</h1>
+  
  </body>
   
 </html>
