--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  </head>
   
  <body>
-    <img src="jakob-owens-MctEgCk1Dm0-unsplash.jpg">
+    <img src="jakob-owens-MctEgCk1Dm0-unsplash.jpg" height=200 width=200>
     <h1>Welcome To My Hawaii Vacation</h1>
   
  </body>
