--- a/javascript.html
+++ b/javascript.html
@@ -3,12 +3,12 @@
   
   <head> 
     <meta charset="utf-8"
-          <title> Hawaii Vacation JavaScript Page</title>
-  </head>
+          <title>Hawaii Vacation</title>
+ </head>
 
   <body>
     <img src="GettyImages-183264160-1024x647.webp">
-    <h1> Hawaii Vacation </h1>
+    <h1> My Hawaii Vacation </h1>
     Back to <a href="index.html">home page</a>
 </body>
 
