--- a/javascript.html
+++ b/javascript.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html>
   
-  <head> 
-    <meta charset="utf-8"
-          <title>Hawaii Vacation</title>
+  <head>
+    <meta charset="ute-8">
+    <title>Hawaii Vacation</title>
  </head>
 
   <body>
