--- a/javascript.html
+++ b/javascript.html
@@ -3,7 +3,7 @@
   
   <head>
     <meta charset="ute-8">
-    <title>Hawaii Vacation</title>
+    <title>Hawaii Vacation Javascript</title>
 </head>
 
   <body>
