--- a/index.html
+++ b/index.html
@@ -3,13 +3,24 @@
 
  <head>
     <meta charset="ute-8">
-    <title>Hawaii Vacation</title>
+    <title>Programming Portfolio</title>
  </head>
   
  <body>
-    <img src="GettyImages-183264160-1024x647.webp">
-    <h1>Welcome To My Hawaii Vacation</h1>
-  
+    <img src="IMG_0373.jpg">
+   <table>
+    <thread>
+     <tr>
+      <th> <img src="IMG_0370.jpg"> </th>
+      <th> <img src="IMG_0371.jpg> </th>
+      <th> <img src="IMG_0373.jpg"> </th>
+       </tr>
+       </thread>
+       
+    <h1>Welcome To Victors Programming Portfolio</h1>
+ 
+  <p> My name is Victor Garcia. This website is for my portfolio of programs that I have coded for CSC106 The Joy of Programming course at the University of Rhode Island. I wrote this page using the HTML programming language. Use the navigation buttons above to navigate through my website!
+  </p>
  </body>
   
 </html>
