--- a/javascript.html
+++ b/javascript.html
@@ -1,14 +1,25 @@
 <!DOCTYPE HTML>
 <html>
-  
+
   <head>
     <meta charset="ute-8">
-    <title>Hawaii Vacation Javascript</title>
-</head>
-
-  <body>
-    <img src="GettyImages-183264160-1024x647.webp">
-    <h1> My Hawaii Vacation </h1>
+    <title>Programming Portfolio</title>
+ </head>
+  
+ <body>
+    <img src="IMG_0373.jpg">
+   <table>
+    <thread>
+     <tr>
+       <td> <a href="index.html"> <img src="IMG_0370.jpg"> </a>
+      <td> <a href="index.html"> <img src="IMG_0371.jpg> </a>
+      <td> <a href="index.html"> <img src="IMG_0373.jpg"> </a>
+       </tr>
+       </thread>  
+ 
+    <h1> My Javascipt Page</h1>
+        
+    <p> Here is my Javascript page. Use the link below to navigate back to the homepage using the link provided or use the navigation buttons above. Thanks!</p>
     Back to <a href="index.html">home page</a>
 </body>
 
