--- a/javascript.html
+++ b/javascript.html
@@ -9,13 +9,14 @@
  <body>
     <img src="IMG_0373.jpg">
    <table>
-    <thread>
+    <thead>
+      <tbody>
      <tr>
        <td> <a href="index.html"> <img src="IMG_0370.jpg"> </a>
       <td> <a href="index.html"> <img src="IMG_0371.jpg> </a>
-      <td> <a href="index.html"> <img src="IMG_0373.jpg"> </a>
+      <td> <a href="index.html"> <img src="IMG_0372.jpg"> </a>
        </tr>
-       </thread>  
+       </thead>  
  
     <h1> My Javascipt Page</h1>
         
