--- a/javascript.html
+++ b/javascript.html
@@ -10,11 +10,10 @@
     <img src="IMG_0373.jpg">
    <table>
     <thead>
-      <tbody>
      <tr>
-       <td> <a href="index.html"> <img src="IMG_0370.jpg"> </a>
-      <td> <a href="index.html"> <img src="IMG_0371.jpg> </a>
-      <td> <a href="index.html"> <img src="IMG_0372.jpg"> </a>
+       <th> <a href="index.html"> <img src="IMG_0370.jpg"> </a>
+      <th> <a href="index.html"> <img src="IMG_0371.jpg> </a>
+      <th> <a href="index.html"> <img src="IMG_0372.jpg"> </a>
        </tr>
        </thead>  
  
