--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
  <body>
     <img src="IMG_0373.jpg">
    <table>
-    <thread>
+    <thead>
      <tr>
-      <th> <img src="IMG_0370.jpg"> </th>
-      <th> <img src="IMG_0371.jpg> </th>
-      <th> <img src="IMG_0373.jpg"> </th>
+      <th> <img src="IMG_0370.jpg"> 
+      <th> <img src="IMG_0371.jpg> 
+      <th> <img src="IMG_0373.jpg"> 
        </tr>
-       </thread>
+       </thead>
        
     <h1>Welcome To Victors Programming Portfolio</h1>
  
-  <p> My name is Victor Garcia. This website is for my portfolio of programs that I have coded for CSC106 The Joy of Programming course at the University of Rhode Island. I wrote this page using the HTML programming language. Use the navigation buttons above to navigate through my website!
+  <p> My name is Victor Garcia. This website is for my portfolio of programs that I have coded for CSC106 The Joy of Programming course at the University of Rhode Island. I wrote this page using the HTML programming language.<br> Use the navigation buttons above to navigate through my website!
   </p>
  </body>
   
