--- a/javascript.html
+++ b/javascript.html
@@ -14,10 +14,10 @@
        <th> <a href="index.html"> <img src="IMG_0370.jpg"> </a>
       <th> <a href="index.html"> <img src="IMG_0371.jpg> </a>
       <th> <a href="index.html"> <img src="IMG_0372.jpg"> </a>
-       </tr>
-       </thead>  
- </body>
- <body>
+     </tr>
+    </thead> 
+        </table>
+
     <h1> My Javascipt Page</h1>
         
     <p> Here is my Javascript page. Use the link below to navigate back to the homepage using the link provided or use the navigation buttons above. Thanks!</p>
