--- a/javascript.html
+++ b/javascript.html
@@ -6,7 +6,7 @@
     <title>Programming Portfolio</title>
  </head>
   
- <body>
+ <title>
     <img src="IMG_0373.jpg">
    <table>
     <thead>
@@ -17,6 +17,9 @@
      </tr>
     </thead> 
         </table>
+        </title>
+     
+   <body>
 
     <h1> My Javascipt Page</h1>
         
