--- a/javascript.html
+++ b/javascript.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="ute-8">
-    <title>Programming Portfolio</title>
+    <title>Javascript Page</title>
  </head>
   
  <title>
