--- a/javascript.html
+++ b/javascript.html
@@ -6,7 +6,7 @@
     <title>Javascript Page</title>
  </head>
   
- <title>
+ <body>
     <img src="IMG_0373.jpg">
    <table>
     <thead>
@@ -17,7 +17,7 @@
      </tr>
     </thead> 
         </table>
-        </title>
+        </body>
      
    <body>
 
