--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
    <table>
     <thead>
      <tr>
-      <th> <img src="IMG_0370.jpg"> 
-      <th> <img src="IMG_0371.jpg> 
-      <th> <img src="IMG_0373.jpg"> 
-       </tr>
-       </thead>
+       <th> <a href="index.html"> <img src="IMG_0370.jpg"> </a>
+      <th> <a href="index.html"> <img src="IMG_0371.jpg> </a>
+      <th> <a href="index.html"> <img src="IMG_0372.jpg"> </a>
+     </tr>
+    </thead> 
+        </table>
+        </body>
+     
+   <body>
        
     <h1>Welcome To Victors Programming Portfolio</h1>
  
