--- a/javascript.html
+++ b/javascript.html
@@ -11,9 +11,9 @@
    <table>
     <thead>
      <tr>
-       <th> <a href="index.html"> <img src="IMG_0370.jpg"> </a> </th>
-      <th> <a href="javascript.html"> <img src="IMG_0371.jpg> </a> </th>
-      <th> <a href="aboutme.html"> <img src="IMG_0372.jpg"> </a> </th>
+      <th> <a href="index.html"> <img src="IMG_0370.jpg"> </a>
+      <th> <a href="javascript.html"> <img src="IMG_0371.jpg"> </a>
+      <th> <a href="aboutme.html"> <img src="IMG_0372.jpg"> </a>
      </tr>
     </thead> 
         </table>
