--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
        
     <h1>Welcome To Victors Programming Portfolio</h1>
  
-  <p> This website is for my portfolio of programs that I have coded for CSC106 The Joy of Programming course at the University of Rhode Island. I wrote this page using the HTML programming language. I used GITHUB as a tool to create these webpages that are linked together using specific codes in order to get these end results.<br> Use the navigation buttons above to navigate through my web pages that I've created!
+  <p> This website is for my portfolio of programs that I have coded for CSC106 The Joy of Programming course at the University of Rhode Island. I wrote this page using the HTML programming language. I used GITHUB as a tool to create these webpages that are linked together using specific codes in order to get these end results.Use the navigation buttons above to navigate through my web pages that I've created!
   </p>
     
  </body>
