--- a/aboutme.html
+++ b/aboutme.html
@@ -22,7 +22,7 @@
        
     <h1>About Me Page</h1>
  
-  <p> My name is Victor Garcia, I am a post graduate student at the University of Rhode Island. I graduted in the Spring of 2022 with a Bachelors in Accounting. I am currently taking four courses at the URI Kingston campus to finish my 150 credit mark for CPA exam eliligibility. I enjoy watching both college & professional football, basktetball and baseball. I am a follower of the Greenbay Packers, Mets and New York Knicks. I also won in both of my fantasy football leagues sitting at (1-0), and have great hopes for this season! I am the 2019-2020 league champion and hope to get my second ring soon!</p>
+  <p> My name is Victor Garcia, I am a post graduate student at the University of Rhode Island. I graduted in the Spring of 2022<br>with a Bachelors in Accounting. I am currently taking four courses at the URI Kingston campus to finish my 150 credit mark for CPA exam eliligibility. I enjoy watching both college & professional football, basktetball and baseball. I am a follower of the Greenbay Packers, Mets and New York Knicks. I also won in both of my fantasy football leagues sitting at (1-0), and have great hopes for this season! I am the 2019-2020 league champion and hope to get my second ring soon!</p>
    
   Back to <a href="index.html">home page</a>
  </body>
