--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
  </head>
   
  <body>
-    <img src="IMG_0373.jpg">
+    <img src="Banner.jpg">
    <table>
     <thead>
      <tr>
-      <th> <a href="index.html"> <img src="IMG_0370.jpg"> </a>
-      <th> <a href="javascript.html"> <img src="IMG_0371.jpg"> </a>
-      <th> <a href="aboutme.html"> <img src="IMG_0372.jpg"> </a>
+      <th> <a href="index.html"> <img src="home button.jpg"> </a>
+      <th> <a href="javascript.html"> <img src="javascripts.jpg"> </a>
+      <th> <a href="aboutme.html"> <img src="aboutme.jpg"> </a>
      
      </tr>
     </thead> 
