--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <thead>
      <tr>
       <th> <a href="index.html"> <img src="home button.jpg"> </a>
-      <th> <a href="javascript.html"> <img src="javascripts.jpg"> </a>
+      <th> <a href="javascript.html"> <img src="Untitled.jpg"> </a>
       <th> <a href="aboutme.html"> <img src="aboutme.jpg"> </a>
      
      </tr>
