--- a/javascript.html
+++ b/javascript.html
@@ -7,13 +7,15 @@
  </head>
   
  <body>
-    <img src="IMG_0373.jpg">
+    <img src="Banner.jpg">
    <table>
     <thead>
      <tr>
-      <th> <a href="index.html"> <img src="IMG_0370.jpg"> </a>
-      <th> <a href="javascript.html"> <img src="IMG_0371.jpg"> </a>
-      <th> <a href="aboutme.html"> <img src="IMG_0372.jpg"> </a>
+      <th> <a href="index.html"> <img src="home.jpg"> </a>
+      <th> <a href="Apps.html"> <img src="apps.jpg"> </a>
+      <th> <a href="javascript.html"> <img src="javascripts.jpg"> </a>
+      <th> <a href="aboutme.html"> <img src="aboutme.jpg"> </a>
+     
      </tr>
     </thead> 
         </table>
