--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <style>
     
     }
-    body { 
-           background-color:rgb(211,211,211);
+    body { background-color:rgb(211,211,211);
     
     }
     </style>
