--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Programming Portfolio</title>
     <style>
     
-    }
-    body { background-color:rgb(211,211,211);
+     body{ background-color:grey;
     
     }
     </style>
