--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="ute-8">
     <title>Programming Portfolio</title>
    
-  body{ background-color:grey;}
+  body{ 
+  background-color:grey;
+  }
  </head>
   
  <body>
