--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
    
  <body>
  
-  body{ 
-  background-color:grey;
-  }
     <img src="Banner.jpg">
    <table>
     <thead>
@@ -26,11 +23,15 @@
      </tr>
     </thead> 
         </table>
+        <style> 
+        body{ background-color: grey;
+        }
+        </style>
         </body>
    
      
    <body>
-       
+
     <h1>Welcome To Victors Programming Portfolio</h1>
  
   <p> This website is for my portfolio of programs that I have coded for CSC106 The Joy of Programming course at the <br> University of Rhode Island. I wrote this page using the HTML programming language. I used GITHUB as a tool to create these <br> webpages that are linked together <br> using specific codes in order to get these end results.Use the navigation buttons above to navigate through my web pages that I've created!
