--- a/javascript.html
+++ b/javascript.html
@@ -7,6 +7,7 @@
  </head>
   
  <body>
+ 
     <img src="Banner.jpg">
    <table>
     <thead>
@@ -16,9 +17,14 @@
       <th> <a href="javascript.html"> <img src="javascripts.jpg"> </a>
       <th> <a href="aboutme.html"> <img src="aboutme.jpg"> </a>
      
+ 
      </tr>
     </thead> 
         </table>
+        <style> 
+        body{ background-color: grey;
+        }
+        </style>
         </body>
      
    <body>
