--- a/javascript.html
+++ b/javascript.html
@@ -35,9 +35,10 @@
   <p> Dancing Bitmoji
   
    <br> A computer programed bitmoji of myself dancing!
-    <h2><a href="https://www.khanacademy.org/computer-programming/garcia_dancing_bitmoji/5575455970738176">Dancing Bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_dancing_bitmoji/5575455970738176/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
-  <br> A computer programed bitmoji of myself racing a bunny, who will win!??  
-     <h2><a href="https://www.khanacademy.org/computer-programming/garcia_racingbitmoji/5311900511944704">Racing Bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_racingbitmoji/5311900511944704/embed.js?editor=no&buttons=no&author=yes&embed=yes"></script>
+    <h2><a href="https://www.khanacademy.org/computer-programming/garcia_dancing_bitmoji/5575455970738176"></a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_dancing_bitmoji/5575455970738176/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+  Racing Bitmoji
+   <br> A computer programed bitmoji of myself racing a bunny, who will win!??  
+     <h2><a href="https://www.khanacademy.org/computer-programming/garcia_racingbitmoji/5311900511944704"></a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_racingbitmoji/5311900511944704/embed.js?editor=no&buttons=no&author=yes&embed=yes"></script>
      </p>  
      
    <br> Back to <a href="index.html">home page</a>
