--- a/javascript.html
+++ b/javascript.html
@@ -49,8 +49,8 @@
       <td> 
       <tbody>
       <tr>
-      <td> <h2><a href=<h2><a href="https://www.khanacademy.org/computer-programming/garcia_dancingbitmojifun/6750478727168000">garcia_dancingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_dancingbitmojifun/6750478727168000/embed.js?editor=no&buttons=no&author=no&embed=yes"></script> 
-      <td><h2><a href=<h2><a href="https://www.khanacademy.org/computer-programming/garcia_racingbitmojifun/4590990226145280">garcia_racingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_racingbitmojifun/4590990226145280/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+      <td> <h2><a href=<h2><a href="https://www.khanacademy.org/computer-programming/garcia_dancingbitmojifun/6750478727168000"></a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_dancingbitmojifun/6750478727168000/embed.js?editor=no&buttons=no&author=no&embed=yes"></script> 
+      <td><h2><a href=<h2><a href="https://www.khanacademy.org/computer-programming/garcia_racingbitmojifun/4590990226145280"></a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_racingbitmojifun/4590990226145280/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
         </tr>
  
        
