--- a/javascript.html
+++ b/javascript.html
@@ -55,8 +55,8 @@
       <tr>
       <td> <h2><a href=<h2><a href="https://www.khanacademy.org/computer-programming/garcia_dancingbitmojifun/6750478727168000"></a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_dancingbitmojifun/6750478727168000/embed.js?editor=no&buttons=no&author=no&embed=yes"></script> 
       <td><h2><a href=<h2><a href="https://www.khanacademy.org/computer-programming/garcia_racingbitmojifun/4590990226145280"></a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_racingbitmojifun/4590990226145280/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
-      <td> <h2><a href="https://www.khanacademy.org/computer-programming/garcia_follow/4674303544573952">garcia_follow</a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_follow/4674303544573952/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
-      <td> <h2><a href="https://www.khanacademy.org/computer-programming/garcia_decision/6437910196305920">garcia_decision</a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_decision/6437910196305920/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+      <td> <h2><a href="https://www.khanacademy.org/computer-programming/garcia_follow/4674303544573952"></a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_follow/4674303544573952/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+      <td> <h2><a href="https://www.khanacademy.org/computer-programming/garcia_decision/6437910196305920"></a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_decision/6437910196305920/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
       </tr>
  
      </tbody>
