--- a/javascript.html
+++ b/javascript.html
@@ -79,7 +79,25 @@
        </tbody>
     
     </thead>
+     </table>
+    <table>
+    <thead>
+    <tr>
+      <th> Bitmoji Zoo
+    </tr>
+         </thead>
+    <tbody>
+      <tr>
+       <td> Bitmojis locked in cage
+      <tr>
+      <td> 
+      <tbody>
+      <tr>
+      <td> <h2><a href="https://www.khanacademy.org/computer-programming/garcia_zoo/5696488094613504"></a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_zoo/5696488094613504/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+      </tr>
+       </tbody>
     
+    </thead>
 <p>Back to <a href="index.html">home page</a></p>
 </body>
 
