--- a/javascript.html
+++ b/javascript.html
@@ -84,16 +84,19 @@
     <thead>
     <tr>
       <th> Bitmoji Zoo
+      <th> Bitmoji Tag
     </tr>
          </thead>
     <tbody>
       <tr>
-       <td> Bitmojis locked in cage
+      <td> Bitmojis locked in cage
+      <td> Click and tag them out
       <tr>
       <td> 
       <tbody>
       <tr>
       <td> <h2><a href="https://www.khanacademy.org/computer-programming/garcia_zoo/5696488094613504"></a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_zoo/5696488094613504/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+      <td> <h2><a href="https://www.khanacademy.org/computer-programming/garcia_tag/5956607453741056"></a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_tag/5956607453741056/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
       </tr>
        </tbody>
     
