--- a/javascript.html
+++ b/javascript.html
@@ -106,17 +106,20 @@
     <thead>
     <tr>
       <th> Bitmoji Contact List
+      <th> Tracing Initials
     </tr>
          </thead>
     <tbody>
       <tr>
       <td> Call whoever you want 
+      <td> Trace The Letters!
       <tr>
       <td> 
       <tbody>
       <tr>
       <td> <h2><h2><a href="https://www.khanacademy.org/computer-programming/garcia_contacts/4657275349811200"></a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_contacts/4657275349811200/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>
-       </tr>
+      <td> <h2><a href="https://www.khanacademy.org/computer-programming/garcia_education/5039178496131072"></a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_education/5039178496131072/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>
+      </tr>
        </tbody>
     
     </thead>
