--- a/javascript.html
+++ b/javascript.html
@@ -116,10 +116,31 @@
       <tr>
       <td> 
       <tbody>
-      <tr>
+      <tr><h2><a href="https://www.khanacademy.org/computer-programming/garcia_bitmojifrogger/6015832836063232">Garcia_BitmojiFrogger</a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_bitmojifrogger/6015832836063232/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
       <td> <h2><h2><a href="https://www.khanacademy.org/computer-programming/garcia_contacts/4657275349811200"></a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_contacts/4657275349811200/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>
       <td> <h2><a href="https://www.khanacademy.org/computer-programming/garcia_education/5039178496131072"></a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_education/5039178496131072/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>
       </tr>
+       </tbody>
+    
+    </thead>
+      </table> 
+          <table>
+    <thead>
+    <tr>
+      <th> Bitmoji Frogger
+      <th> 
+    </tr>
+         </thead>
+    <tbody>
+      <tr>
+      <td> Get a you a new highscore!
+      <td>
+      <tr>
+      <td> 
+      <tbody>
+       <tr>
+      <td><h2><a href="https://www.khanacademy.org/computer-programming/garcia_bitmojifrogger/6015832836063232"></a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_bitmojifrogger/6015832836063232/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
+       </tr>
        </tbody>
     
     </thead>
