--- a/javascript.html
+++ b/javascript.html
@@ -117,7 +117,7 @@
       <td> 
       <tbody>
       <tr><h2>
-        <td> <h2><h2><a href="https://www.khanacademy.org/computer-programming/garcia_contacts/4657275349811200"></a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_contacts/4657275349811200/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>
+        <td> <h2><a href="https://www.khanacademy.org/computer-programming/garcia_contacts/4657275349811200"></a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_contacts/4657275349811200/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>
       <td> <h2><a href="https://www.khanacademy.org/computer-programming/garcia_education/5039178496131072"></a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_education/5039178496131072/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>
       </tr>
        </tbody>
