--- a/javascript.html
+++ b/javascript.html
@@ -139,8 +139,8 @@
       <td> 
       <tbody>
        <tr>
-      <td><h2><a href="https://www.khanacademy.org/computer-programming/garcia_bitmojifrogger/6015832836063232"></a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_bitmojifrogger/6015832836063232/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
-       </tr>
+      <td><h2><h2><a href="https://www.khanacademy.org/computer-programming/garcia_bitmojifrogger/6015832836063232">Garcia_BitmojiFrogger</a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_bitmojifrogger/6015832836063232/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>
+        </tr>
        </tbody>
     
     </thead>
