--- a/javascript.html
+++ b/javascript.html
@@ -128,18 +128,19 @@
     <thead>
     <tr>
       <th> Bitmoji Frogger
-      <th> 
+      <th> Memory Game
     </tr>
          </thead>
     <tbody>
       <tr>
-      <td> Get a you a new highscore!
-      <td>
+      <td> Get a new highscore!
+      <td> Match the cards
       <tr>
       <td> 
       <tbody>
        <tr>
       <td><h2><h2><a href="https://www.khanacademy.org/computer-programming/garcia_bitmojifrogger/6015832836063232">Garcia_BitmojiFrogger</a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_bitmojifrogger/6015832836063232/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>
+       <td><h2><a href="https://www.khanacademy.org/computer-programming/garcia_memory/5566399900073984">Garcia_Memory</a></h2><script src="https://www.khanacademy.org/computer-programming/garcia_memory/5566399900073984/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>
         </tr>
        </tbody>
     
