--- a/Apps.html
+++ b/Apps.html
@@ -16,7 +16,7 @@
       <th> <a href="Apps.html"> <img src="apps.jpg"> </a>
       <th> <a href="javascript.html"> <img src="javascripts.jpg"> </a>
       <th> <a href="aboutme.html"> <img src="aboutme.jpg"> </a>
-     
+      <th> <a href="finalproject.html"> <img src="finalproject.jpg"> </a>
  
      </tr>
     </thead> 
