--- a/finalproject.html
+++ b/finalproject.html
@@ -34,7 +34,8 @@
  
   <p> For my final project I created a virtual soccer game that allows you to use my Bitmoji to try and score against the goalie.<br>
       Use the arrow keys to move the character to the ball press the space bar to the kick the ball into the net <br>
-      The goalie will get better in time so try to get as much scores as you can ! 
+      The goalie will get better in time so try to get as much scores as you can, and try your best.<br>
+      This game was inspired by the World Cup that recently just ended with Argentina winning, shout out to Messi!
   </p>
     
   <table>
